   decode. (Note that calling the Fox blindly not only leads to
   unnecessary band utilization, but can also significantly reduce the
   QSO rate due to unanswered (Super)Fox replies.)

 - Switching to SuperHound mode automatically sets the Rx frequency to
   750 Hz. The previously selected frequency is saved and restored 
   afterwards.

 - A flaw resulting in sub-optimal SuperFox QSO rates has been
   corrected.

 - Old-style Fox stations can now transmit free text messages (up to
   13 characters) by using an available stream.

 - Some enhancements useful for Fox operators: Active Station Window now 
   shows band activity. Hound callsigns can be highlighted via UDP API, and 
   assigned a score for sorting via UDP API. Fox Tx frequency is preserved 
   when switching in/out of Fox mode.

 - UDP Status Update messages now include information on how many callsigns
   have highlighting applied, and how many callsigns have a score assigned.

Other enhancements and fixes:

 - In FT8 mode, the Settings dialog no longer resets the VFO frequency 
   to band/mode default unless really needed.

 - Several code improvements specifically for macOS.

 - Updated CTY.DAT and Hamlib.


                      Release: WSJT-X 2.7.0-rc6
                             July 19, 2024
                      -------------------------

WSJT-X 2.7.0 Release Candidate 6 is a bug-fix release primarily
affecting the new SuperFox mode.  The following bugs have been fixed:

 - Strong signals from Superfox too frequently failed to decode.

 - SuperFox sometimes sent incorrect signal reports and an invalid
   digital signature.

 - A Fortran bounds error could sometimes occur in the SuperFox
   decoder.

 - For SuperFox operator, the "age" displayed for Hound callers
   became garbled after the 0000 UTC date change.

 - Decodes of SuperFox transmissions were not posted to PSK Reporter.

 - Some SuperFox-related  messages were posted incorrectly to ALL.TXT.
