@@ -2937,7 +2937,7 @@ QLabel[oob=&quot;true&quot;] {
               </size>
              </property>
              <property name="toolTip">
-              <string>Toggle FT8 hound mode On/Off</string>
+              <string>Toggle FT8 hound mode On/Off.&lt;br&gt;Right-click to activate or deactivate SuperFox mode.</string>
              </property>
              <property name="styleSheet">
               <string notr="true">QPushButton:checked {
@@ -2970,7 +2970,7 @@ QLabel[oob=&quot;true&quot;] {
               <enum>Qt::StrongFocus</enum>
              </property>
              <property name="toolTip">
-              <string>Switch to FT8 mode.&lt;br&gt; Right-click to toggle SuperFox mode On/Off.</string>
+              <string>Switch to FT8 mode.</string>
              </property>
              <property name="text">
               <string>FT8</string>
